--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -59,9 +59,16 @@ body{
 	width: 100%;
 	text-align: center;
 }
+
+#horNav a:hover{
+	font-weight: bolder;
+	background-color: black;	
+}
+
 #horNav a:active{
 	background-color: black;
 }
+
 
 a {
 	margin: 130px 40px 50px 10px;
@@ -118,21 +125,19 @@ img {
 	box-shadow: 2px 2px #222;
 }
 
-footer span{
-	float: right;
-	margin-right: 50px;
-	display:inline-block;
+footer {
+	clear: both;
+	background-color: black;
+	text-align: center;
+	color: white;x
+	margin-bottom: 40px;
 }
 
-footer{
-	clear: both;
-	display: block;
-	bottom: 0;
-	width: auto;
-	margin:10px, -20px, -50px, -50px;
+#copyright {
+	padding-left: 300px;
+}
 
-	background-color: rgba(250,250,250,.6);
-	color: #000;
-	padding: 20px;
-	text-indent: 10px;
+#copyright span {
+	float: right;
+	padding-right: 40px;
 }
