--- a/css/contact.css
+++ b/css/contact.css
@@ -33,6 +33,15 @@ body{
 	font-family: Garamond;
 }
 
+#horNav a:hover{
+	font-weight: bolder;
+	background-color: black;	
+}
+
+#horNav a:active{
+	background-color: black;
+}
+
 a {
 	margin: 130px 40px 50px 10px;
 	text-decoration: none;
@@ -50,27 +59,19 @@ h1 {
 	padding-left: 40px;
 
 }
-footer span{
-	float: right;
-	margin-right: 50px;
-	display:inline-block;
-}
-
-footer p {
-
-}
-
-footer{
+footer {
 	clear: both;
-	display: block;
-	bottom: 0;
-	height: 150px;
-	width: auto;
-	margin: 10px -40px -10px -10px;
-	border: 1px solid #fff;
-	border-top-radius: 40px;
-	background-color: rgba(250,250,250,.3);
-	color: #000;
-	padding: 20px;
-	text-indent: 10px;
+	background-color: black;
+	text-align: center;
+	color: white;x
+	margin-bottom: 40px;
+}
+
+#copyright {
+	padding-left: 300px;
+}
+
+#copyright span {
+	float: right;
+	padding-right: 40px;
 }
